--- a/PokemonOpenRun/requirements.txt
+++ b/PokemonOpenRun/requirements.txt
@@ -1,6 +1,9 @@
-Flask==1.0.3
 Flask-JWT-Extended
 Flask-RESTful
-Werkzeug==0.15.4
+Click==7.0
+Flask==1.0.3
+itsdangerous==1.1.0
+Jinja2==2.10.1
+MarkupSafe==1.1.1
 uWSGI==2.0.18
-MarkupSafe==2.0.1
+Werkzeug==0.15.4
