--- a/PokemonOpenRun/app.ini
+++ b/PokemonOpenRun/app.ini
@@ -4,7 +4,7 @@ callable = app
 processes = 4
 threads = 2
 callable = app
-socket = :5000
+socket = 0.0.0.0:5000
 master = true
 chmod-socket = 660
 vacuum = true
