--- a/PokemonOpenRun/app.ini
+++ b/PokemonOpenRun/app.ini
@@ -1,10 +1,10 @@
 [uwsgi]
-wsgi-file = app.py
+wsgi-file = wsgi.py
 callable = app
 processes = 4
 threads = 2
 callable = app
-socket = 0.0.0.0:5000
+socket = :5000
 master = true
 chmod-socket = 660
 vacuum = true
